Fix fetch error part 2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			name="description"
 			content="This a weather website."
 		/>
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">git
 		<link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
