Fetch error is fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			name="description"
 			content="This a weather website."
 		/>
-		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">git
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -87,6 +87,5 @@
 		</div>
 		<script src="js/weatherData.js"></script>
 		<script src="js/last_visit.js"></script>
-		<script src="js/script.js"></script>
 	</body>
 </html>
